--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created for Retenciones"
     />
     <script src="https://kit.fontawesome.com/ac7f9a546a.js" crossorigin="anonymous"></script>
-    <title>Sonríe Seguro Stock</title>
+    <title>Sonríe Seguro </title>
   </head>
   <body>
 
