--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created for Retenciones"
+      content="Sitio creado para Campaña Sonrie Seguro"
     />
     <script src="https://kit.fontawesome.com/ac7f9a546a.js" crossorigin="anonymous"></script>
    
