--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Sitio creado para Campaña Sonrie Seguro"
+      content="Sitio creado para Campaña Accidentes Personales"
     />
     <script src="https://kit.fontawesome.com/ac7f9a546a.js" crossorigin="anonymous"></script>
    
-    <title>Sonríe Seguro </title>
+    <title>Accidentes Personales </title>
   </head>
   <body>
 
